--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,6 +17,8 @@
      "codespaces": {
          "openFiles": [
              "codespace.md"
+              ,
+ "postCreateCommand": "echo '# Writing code upon codespace creation!'  >> codespace.md"
          ]
      }
  }
